--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             rgba(44, 62, 80, 0.8),
             rgba(44, 62, 80, 0.8)
           ),
-          url("/images/background.jpg") center/cover no-repeat;
+          url("https://raw.githubusercontent.com/PlayDev-Company/site/main/images/background.jpg")
+            center/cover no-repeat;
         display: flex;
         align-items: center;
         text-align: center;
